E-Commerce/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ecommerce
spec:
  hosts:
    - "*"
  gateways:
    - ecommerce-gateway
  http:
    - match:
        - uri:
            exact: /order
        - uri:
            prefix: /shipping
      route:
        - destination:
            host: order-service
            port:
              number: 3000
          weight: 100
        - destination:
            host: shipping-service
            port:
              number: 3001
          weight: 100
